Fixed contrast bug and added refresh button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -201,14 +201,15 @@ main {
     padding-block: var(--size-400);
 }
 
-.box {
+.box, .box-contrast {
     border: 1px solid var(--clr-neutral-500);
     border-top: none;
     width: 100%;
     height: 20vh;
 }
 
-.box:first-of-type {
+.box:first-of-type, 
+.box-contrast:first-of-type {
     border-top: 1px solid var(--clr-neutral-500);
 }
 
@@ -223,7 +224,14 @@ main {
         border-left: none;
     }
 
-    .box:first-of-type {
+    .box-contrast {
+        height: 30vh;
+        border: 1px solid var(--clr-neutral-500);
+        border-left: none;
+    }
+
+    .box:first-of-type, 
+    .box-contrast {
         border-left: 1px solid var(--clr-neutral-500);
     }
 }
@@ -251,26 +259,28 @@ main {
     
 
     .library .box {
-        height: 300px;
+        height: 40vh;
     }
 
     .box-wrapper {
         display: flex;
     }
 
-    .library .button-wrapper {
+    /*.library .button-wrapper {
         grid-column: span 5;
-    }
+    } */
 }
 
 
 /* Edit hover */
 
-.box {
+.box, 
+.box-contrast {
     position: relative;
 }
 
-.box:hover {
+.box:hover,
+.box-contrast:hover {
     cursor: pointer;
 }
 
@@ -283,7 +293,9 @@ main {
     right: 20px;
 }
 
-.box:hover .hover-edit {
+/* Change the icon on the contrast page */
+.box:hover .hover-edit,
+.box-contrast:hover .hover-edit {
     opacity: 1;
 }
 
@@ -294,7 +306,8 @@ main {
     transition: background-color 0.3s ease;
 }
 
-.box:hover .overlay {
+.box:hover .overlay,
+.box-contrast:hover .overlay {
     background-color: rgba(0, 0, 0, 0.1);
 }
 
@@ -359,8 +372,13 @@ main {
 
 /* Contrast */
 .selected {
-    border: 3px solid greenyellow;
+    border: 5px solid var(--clr-neutral-900);
 }
+
+/* position: absolute;
+background-color: rgba(0, 0, 0, 0);
+inset: 0;
+transition: background-color 0.3s ease; */
 
 #palette-container {
     width: 95%;
@@ -405,4 +423,8 @@ main {
 
 .padding-block-1 {
     padding-block: 1em;
+}
+
+.hidden {
+    display: none;
 }
